--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,7 +25,7 @@ http{
 
         # Server React app 
         location / {
-            proxy_pass http://frontend; # Proxy to frontend service
+            proxy_pass https://creatorshub.netlify.app/; # Proxy to frontend service
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -39,7 +39,7 @@ http{
         }
 
         location /api/ {
-            proxy_pass http://backend; # Proxy to backend service
+            proxy_pass https://creators-hub-ik2d.onrender.com/api/; # Proxy to backend service
             proxy_set_header Host $host;
             proxy_set_header X-Real_IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
