--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
