some info on nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,12 +7,17 @@ events{
 http{
     include       mime.types; #  Includes every type of file like css, html, jsx, js etc.
     default_type  application/octet-stream;
+    # If a file’s type cannot be determined, it is sent as application/octet-stream (generic binary data), prompting browsers to download it.
+
 
     sendfile          on;
     keepalive_timeout  65;
 
     # Defining an upstream for backend
     upstream backend{
+        # Default algo : round-robin
+        # for least connection use : least_conn;
+        # for ip hashing use : ip_hash; 
         server server:5000;
     }
     # Defining an upstream for frontend
@@ -40,6 +45,7 @@ http{
 
         location /api/ {
             proxy_pass https://creators-hub-ik2d.onrender.com/api/; # Proxy to backend service
+            # Defines the upstream server to which requests should be forwarded
             proxy_set_header Host $host;
             proxy_set_header X-Real_IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
